<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_select"
                android:textSize="@dimen/font_size_18_sp"
                android:layout_marginTop="@dimen/space_40_dp"
                android:layout_marginHorizontal="@dimen/space_40_dp"/>

            <Spinner
                android:id="@+id/spinner_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10_dp"
                android:layout_marginHorizontal="@dimen/space_40_dp"
                />

            <EditText
                android:id="@+id/et_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20_dp"
                android:layout_marginHorizontal="@dimen/space_40_dp"
                android:inputType="text"
                android:hint="@string/label_movie_name"
                android:singleLine="true"
                android:lines="1"
                />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20_dp"
                android:layout_gravity="center"
                android:text="@string/label_search"
                android:background="@drawable/my_custom_button"
                android:textAllCaps="false"
                android:textSize="@dimen/font_size_18_sp"
                />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_result"
                android:textSize="@dimen/font_size_18_sp"
                android:layout_marginTop="@dimen/space_40_dp"
                android:layout_marginHorizontal="@dimen/space_40_dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_40_dp"
                android:layout_marginTop="@dimen/space_20_dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>